EPBDS-14537 Improve the performance of `ProjectIndex` by using in-memory storage and updating the indexes only if they are older than 30 minutes.